--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/rod-nickle/tinyapp/issues"
   },
-  "homepage": "https://github.com/rod-nickle/tinyapp#readme"
+  "homepage": "https://github.com/rod-nickle/tinyapp#readme",
+  "dependencies": {
+    "express": "^4.21.1"
+  }
 }
