--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/nodemon -L express_server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node express_server.js",
+    "dev": "./node_modules/.bin/nodemon -L express_server.js",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,8 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "chai": "^4.3.1",
+    "mocha": "^10.8.2",
     "nodemon": "^3.1.7"
   }
 }
